--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
@@ -5,77 +5,65 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/template.xhtml">
     <ui:define name="breadCrumb">
-        <p:breadCrumb>
+        <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Reportes" url="#"/>
-            <p:menuitem value="Reporte de Evaluaciones por Año Escolar" url="#{siteUrls.reporteEvaluaciones}"/>
-
+            <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}"/>
             <p:separator />
         </p:breadCrumb>
+        <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
+        <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+            <p:outputLabel value="Esta ayuda sirve un monton"/>
+        </p:dialog>
     </ui:define>
     <ui:define name="content">
-        <p:tabView>
-            <p:tab title="Reporte de Evaluaciones por Año Escolar">
-                <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="4">
-                        <p:outputLabel value="Año Escolar:"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.anio2}"></p:inputText>
-                    </p:panelGrid>
-                    <div class="EmptyBox20"></div>
-                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
-                                 paginator="false"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-
-                        <p:column headerText="Nombre de Plantilla" >
-                            #{formatoPantallas.campo50}
-                        </p:column>
-                        <p:column headerText="Grado" >
-                            #{formatoPantallas.campo30}
-                        </p:column>
-                        <p:column headerText="Materia" >
-                            #{formatoPantallas.campo50}
-                        </p:column>
-                        <p:column headerText="Tipo de Plantilla" >
-                            #{formatoPantallas.campo15}
-                        </p:column>
-                        <p:column headerText="Estado de la plantilla" >
-                            #{formatoPantallas.campo15}
-                        </p:column>
-                        <p:column headerText="Elaborada por">
-                            #{formatoPantallas.campo80}
-                        </p:column>
-
-
-
-                        <f:facet name="footer">
-                            Total de alumnos 999
-                        </f:facet>
-                    </p:dataTable>
-                    <div class="EmptyBox20"></div>
-                    <div class="TexAlCenter">
-
-                        <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                            <p:outputLabel value="Exportar a:"></p:outputLabel>
-                            <p:selectOneRadio  id="console" value="#{radioView.console}">
-                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                            </p:selectOneRadio>
-                            <p:commandButton  value="Generar"></p:commandButton>
-                            <p:commandButton value="Refrescar"></p:commandButton>
-                        </h:panelGrid>
-                    </div>
-
-                </h:form>
-            </p:tab>
-
-        </p:tabView>
+        <div class="EmptyBox5"></div>
+        <h:form>            
+            <p:panel>
+                <p:panelGrid columns="5">
+                     <p:outputLabel for="desde" value="Inicio: " class=" Responsive"></p:outputLabel>
+                     <p:calendar class="Container100" id="desde" value="#{rptEvaluacioenesController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                     <p:outputLabel for="hasta" value="Cierre: " class=" Responsive"></p:outputLabel>
+                     <p:calendar class="Container100" id="hasta" value="#{rptEvaluacioenesController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                     <p:commandButton value="generar" actionListener="#{rptEvaluacioenesController.fill()}" update="consulta" ajax="true"></p:commandButton>
+                </p:panelGrid>
+                <div class="EmptyBox20"></div>
+                <p:dataTable id="consulta"  var="car" value="#{rptEvaluacioenesController.listDatos}" 
+                             paginator="false"
+                             reflow="true">
+                    <p:column headerText="Evaluacion" >
+                        #{car.nombreEvaluacion}
+                    </p:column>
+                    <p:column headerText="Ponderacion" >
+                        #{car.ponderacion}
+                    </p:column>
+                    <p:column headerText="Fecha inicicio" >
+                        #{car.fechaInicio}
+                    </p:column>                        
+                    <p:column headerText="Fecha Cierre" >
+                        #{car.fechaCierre}
+                    </p:column>
+                    <p:column headerText="Docente" >
+                        #{car.docente}
+                    </p:column>
+                    <p:column headerText="Curso" >
+                        #{car.gradoResponsable}
+                    </p:column>
+                   
+                </p:dataTable>
+                <div class="EmptyBox20"></div>
+                <div class="TexAlCenter">
+                    <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
+                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                        <p:selectOneRadio  id="console" value="#{rptEvaluacioenesController.tipoRpt}">
+                            <f:selectItem itemValue="2" itemLabel="Excel" />
+                            <f:selectItem itemValue="0" itemLabel="PDF" />
+                        </p:selectOneRadio>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptEvaluacioenesController.generarReporte()}"></p:commandButton>
+                        <p:commandButton value="Refrescar" actionListener="#{rptEvaluacioenesController.refresh()}" update="consulta" ajax="true"></p:commandButton>
+                    </h:panelGrid>
+                </div>
+            </p:panel>
+        </h:form>
     </ui:define>
-
 </ui:composition>
