--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
@@ -26,14 +26,14 @@
                     <p:outputLabel value="hasta:"></p:outputLabel>
                     <p:calendar class="Container100" id="hasta" value="#{rptRendimientoController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="grado" class=" Responsive" value="#{rptRendimientoController.idGrado}" valueChangeListener="#{rptRendimientoController.getSeccionesGrado}" converter="grado">
-                        <f:selectItems itemValue="#{grado}" itemLabel="#{grado.grNombre}" value="#{rptRendimientoController.gradosList}" var="grado"></f:selectItems>
+                    <p:selectOneMenu id="grado" class=" Responsive" value="#{rptRendimientoController.idGrado}" valueChangeListener="#{rptRendimientoController.getSeccionesGrado}">
+                        <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{rptRendimientoController.gradosList}" var="grado"></f:selectItems>
                         <p:ajax event="valueChange" update="seccion"/>
                     </p:selectOneMenu>
-                    <p:outputLabel value="Seccion:" class="Responsive"></p:outputLabel>
+                    <p:outputLabel for="seccion" value="Seccion:" class="Responsive"></p:outputLabel>
                     <p:selectOneMenu id="seccion" class=" Responsive" value="#{rptRendimientoController.seccion}" >
-                        <f:selectItems itemValue="#{seccion}" itemLabel="#{seccion.scDescripcion}" value="#{rptRendimientoController.seccionesList}" var="seccion"></f:selectItems>
-                    </p:selectOneMenu>
+                        <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{rptRendimientoController.seccionesList}" var="seccion"></f:selectItems>
+                    </p:selectOneMenu>                    
                     <p:outputLabel id="materia" value="Materia:"></p:outputLabel>
                     <p:selectOneMenu class=" Responsive" value="#{rptRendimientoController.materia}" >
                         <f:selectItems itemValue="#{materia}" itemLabel="#{materia.maNombre}" value="#{rptRendimientoController.materiaList}" var="materia"></f:selectItems>
@@ -45,8 +45,7 @@
                              paginator="false"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
-                             reflow="true"
-                             >
+                             reflow="true">
                     <p:column headerText="Grado"  filterMatchMode="contains" filterable="true">
                         #{car.grado}
                     </p:column>
